--- a/apps/chatwidget/project.json
+++ b/apps/chatwidget/project.json
@@ -19,7 +19,7 @@
           "apps/chatwidget/src/favicon.ico",
           "apps/chatwidget/src/assets"
         ],
-        "styles": ["apps/chatwidget/src/styles.scss"],
+        "styles": ["apps/chatwidget/src/styles.scss", "libs/chat/src/lib/chat.component.scss"],
         "scripts": []
       },
       "configurations": {
@@ -27,13 +27,13 @@
           "budgets": [
             {
               "type": "initial",
-              "maximumWarning": "500kb",
-              "maximumError": "1mb"
+              "maximumWarning": "1mb",
+              "maximumError": "2mb"
             },
             {
               "type": "anyComponentStyle",
-              "maximumWarning": "2kb",
-              "maximumError": "4kb"
+              "maximumWarning": "2mb",
+              "maximumError": "4mb"
             }
           ],
           "outputHashing": "all"
@@ -51,6 +51,11 @@
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
+      "sslKey": "cert.pem",
+      "sslCert": "key.pem",
+      "options": {
+        
+      },
       "configurations": {
         "production": {
           "browserTarget": "chatwidget:build:production"
