--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@nrwl/angular": "15.4.8",
     "ajv": "^8.12.0",
+    "jwt-decode": "^4.0.0",
     "ngx-popperjs": "^15.2.4",
     "rxjs": "~7.5.0",
     "stream-chat": "^8.14.4",
