--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "nx serve chatwidget",
     "ssl": "nx serve chatwidget --ssl",
     "build": "nx build chatwidget",
-    "build_webpack": "webpack --config webpack.config.js"
+    "build:stats": "nx build chatwidget --stats-json",
+    "analyze": "webpack-bundle-analyzer dist/apps/chatwidget/stats.json",
+    "build:webpack": "webpack --config webpack.config.js"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +30,8 @@
     "stream-chat": "^8.14.4",
     "stream-chat-angular": "^4.52.2",
     "tslib": "^2.3.0",
+    "webpack-bundle-analyzer": "^4.10.1",
+    "webpack-dev-server": "^4.15.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -60,7 +64,7 @@
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
-    "webpack": "^5.89.0",
+    "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
   }
 }
