--- a/apps/chatwidget/project.json
+++ b/apps/chatwidget/project.json
@@ -19,7 +19,10 @@
           "apps/chatwidget/src/favicon.ico",
           "apps/chatwidget/src/assets"
         ],
-        "styles": ["apps/chatwidget/src/styles.scss", "libs/chat/src/lib/chat.component.scss"],
+        "styles": [
+          "apps/chatwidget/src/styles.scss",
+          "libs/chat/src/lib/chat.component.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -51,10 +54,7 @@
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
-
-      "options": {
-        
-      },
+      "options": {},
       "configurations": {
         "production": {
           "browserTarget": "chatwidget:build:production"
