Fixed new shells build size error

--- a/apps/chatwidget-simple/project.json
+++ b/apps/chatwidget-simple/project.json
@@ -31,24 +31,24 @@
           "budgets": [
             {
               "type": "initial",
-              "maximumWarning": "500kb",
-              "maximumError": "1mb"
+              "maximumWarning": "2mb",
+              "maximumError": "3mb"
             },
             {
               "type": "anyComponentStyle",
-              "maximumWarning": "2kb",
-              "maximumError": "4kb"
+              "maximumWarning": "2mb",
+              "maximumError": "4mb"
             }
           ],
           "outputHashing": "all"
         },
         "development": {
           "buildOptimizer": false,
-          "optimization": false,
+          "optimization": true,
           "vendorChunk": true,
           "extractLicenses": false,
           "sourceMap": true,
-          "namedChunks": true
+          "namedChunks": false
         }
       },
       "defaultConfiguration": "production"
