--- a/apps/chatwidget-simple/project.json
+++ b/apps/chatwidget-simple/project.json
@@ -9,7 +9,7 @@
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/chatwidget-simple",
+        "outputPath": "dist/chatwidget-simple",
         "index": "apps/chatwidget-simple/src/index.html",
         "main": "apps/chatwidget-simple/src/main.ts",
         "polyfills": ["zone.js"],
