--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@nrwl/linter": "15.4.8",
     "@nrwl/nx-cloud": "^16.5.2",
     "@nrwl/workspace": "15.4.8",
-    "@types/jest": "28.1.1",
+    "@types/jest": "^28.1.1",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
