Added some tests to add-channel component

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@angular/cli": "~15.0.0",
     "@angular/compiler-cli": "~15.0.0",
     "@angular/language-service": "~15.0.0",
+    "@ngneat/spectator": "^17.0.0",
     "@nrwl/cypress": "15.4.8",
     "@nrwl/eslint-plugin-nx": "15.4.8",
     "@nrwl/jest": "15.4.8",
