--- a/apps/chatwidget/project.json
+++ b/apps/chatwidget/project.json
@@ -43,7 +43,7 @@
         },
         "development": {
           "buildOptimizer": false,
-          "optimization": false, 
+          "optimization": false,
           "vendorChunk": true,
           "extractLicenses": false,
           "sourceMap": true,
@@ -55,7 +55,10 @@
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
       "options": {
-        "proxyConfig": "apps/chatwidget/proxy.conf.json"
+        "host": "localhost",
+        "port": 4200,
+        "proxyConfig": "apps/chatwidget/proxy.conf.json",
+        "disableHostCheck": true
       },
       "configurations": {
         "production": {
