Attempt at routing for netify

--- a/apps/chatwidget-simple/project.json
+++ b/apps/chatwidget-simple/project.json
@@ -17,7 +17,8 @@
         "inlineStyleLanguage": "scss",
         "assets": [
           "apps/chatwidget-simple/src/favicon.ico",
-          "apps/chatwidget-simple/src/assets"
+          "apps/chatwidget-simple/src/assets",
+          "apps/chatwidget-simple/_redirects"
         ],
         "styles": [
           "apps/chatwidget/src/styles.scss",
