--- a/apps/chatwidget-simple/project.json
+++ b/apps/chatwidget-simple/project.json
@@ -18,7 +18,7 @@
         "assets": [
           "apps/chatwidget-simple/src/favicon.ico",
           "apps/chatwidget-simple/src/assets",
-          "_redirects"
+          "apps/chatwidget-simple/src/_redirects"
         ],
         "styles": [
           "apps/chatwidget/src/styles.scss",
