--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~15.0.0",
     "@angular/router": "~15.0.0",
     "@auth0/auth0-angular": "^2.2.3",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@ngx-translate/core": "^14.0.0",
     "@nrwl/angular": "15.4.8",
     "ajv": "^8.12.0",
