--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "ng-mocks": "^14.12.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
